--- a/models/gpt-4o-mini.ipynb
+++ b/models/gpt-4o-mini.ipynb
@@ -2,19 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "import os\n",
+    "import dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "proxy_url = os.getenv(\"PROXY_URL\")\n",
+    "model = \"gpt-4o-mini\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = openai.OpenAI(api_key=api_key, base_url=proxy_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the garden where dreams abide,  \n",
+      "Whispers of petals, a gentle tide.  \n",
+      "Sunlight dances on leaves so green,  \n",
+      "Nature's canvas, a tranquil scene.  \n",
+      "\n",
+      "Breezes carry a melodic tune,  \n",
+      "As stars awaken beneath the moon.  \n",
+      "In every heartbeat, in every sigh,  \n",
+      "Life's fleeting beauty will never die.  \n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "response = client.chat.completions.create(\n",
+    "    model=model, \n",
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": \"this is a test request, write a short poem\"\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
