--- a/models/gpt-4o-mini.ipynb
+++ b/models/gpt-4o-mini.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai\n",
     "import os\n",
-    "import dotenv"
+    "import dotenv\n",
+    "import dspy\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,46 +27,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = openai.OpenAI(api_key=api_key, base_url=proxy_url)"
+    "lm = dspy.LM(\n",
+    "    api_key=api_key,\n",
+    "    model=model,\n",
+    "    api_base=proxy_url,\n",
+    "    temperature=0.5,\n",
+    ")\n",
+    "\n",
+    "dspy.configure(lm=lm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClasificationSignature(dspy.Signature):\n",
+    "    \"\"\"Classify if the input text is domain specific or not. If you are not sure about the domain classify as neutral.\"\"\"\n",
+    "\n",
+    "    prompt = dspy.InputField(desc=\"The input text to classify.\")\n",
+    "\n",
+    "    explanation = dspy.OutputField(desc=\"Reasoning behind the classification.\")\n",
+    "    answer = dspy.OutputField(desc=\"Yes if the input text is domain specific, No otherwise. Neutral if not sure.\")\n",
+    "\n",
+    "\n",
+    "class ClassificationSimple(dspy.Module):\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.prog = dspy.Predict(ClasificationSignature)\n",
+    "    \n",
+    "    def forward(self, prompt: str) -> ClasificationSignature:\n",
+    "        prediction = self.prog(prompt=prompt)\n",
+    "        return prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In the garden where dreams abide,  \n",
-      "Whispers of petals, a gentle tide.  \n",
-      "Sunlight dances on leaves so green,  \n",
-      "Nature's canvas, a tranquil scene.  \n",
-      "\n",
-      "Breezes carry a melodic tune,  \n",
-      "As stars awaken beneath the moon.  \n",
-      "In every heartbeat, in every sigh,  \n",
-      "Life's fleeting beauty will never die.  \n"
+      "Prediction(\n",
+      "    explanation='The statement \"I love cakes\" expresses a personal preference and does not refer to a specific domain or specialized knowledge. It is a general statement about a type of food rather than a technical or specialized subject.',\n",
+      "    answer='No'\n",
+      ")\n"
      ]
     }
    ],
    "source": [
-    "response = client.chat.completions.create(\n",
-    "    model=model, \n",
-    "    messages=[\n",
-    "        {\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": \"this is a test request, write a short poem\"\n",
-    "        }\n",
-    "    ]\n",
-    ")\n",
+    "input = dspy.Example(prompt=\"I love cakes\", explanation=\"The input text is about cakes.\", answer=\"Yes\").with_inputs(\"prompt\")\n",
+    "output = ClassificationSimple()(input.prompt)\n",
     "\n",
-    "print(response.choices[0].message.content)"
+    "print(output)"
    ]
   },
   {
