simple data preprocess

--- a/models/gpt-4o-mini.ipynb
+++ b/models/gpt-4o-mini.ipynb
@@ -8,8 +8,8 @@
     "\n",
     "- nacitat a poupratat dataset v inom ntb, ulozit .csv\n",
     "- v tomto vytvorit univerzalny prompt s premennou {domain name} a {input to classify}\n",
-    "- v dalsom spravit neuronku na klasifikaciu zrejme LSTM + CNN head \n",
-    "- ak ostane cas tak aj SVM+TF-IDF alebo nejaky iny tradicny sposob klasifikaciu "
+    "- v dalsom spravit neuronku na klasifikaciu zrejme LSTM + CNN head (toto mozno) \n",
+    "- SVM+TF-IDF alebo nejaky iny tradicny sposob klasifikaciu "
    ]
   },
   {
@@ -151,7 +151,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(output.answer)"
+   ]
   }
  ],
  "metadata": {
