data preprocessing improved, added data loading and setup for examples

--- a/models/gpt-4o-mini.ipynb
+++ b/models/gpt-4o-mini.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# TODO\n",
-    "\n",
-    "- nacitat a poupratat dataset v inom ntb, ulozit .csv\n",
-    "- v tomto vytvorit univerzalny prompt s premennou {domain name} a {input to classify}\n",
-    "- v dalsom spravit neuronku na klasifikaciu zrejme LSTM + CNN head (toto mozno) \n",
-    "- SVM+TF-IDF alebo nejaky iny tradicny sposob klasifikaciu "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -21,8 +9,14 @@
     "import os\n",
     "import dotenv\n",
     "import dspy\n",
-    "import json\n",
-    "import requests"
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# API setup "
    ]
   },
   {
@@ -40,47 +34,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available models: ['gpt-4o-mini']\n"
-     ]
-    }
-   ],
-   "source": [
-    "def get_models() -> list:\n",
-    "    url = f'{proxy_url}models'\n",
-    "    headers = {\"Content-Type\": \"application/json\", \"Authorization\": f\"Bearer {api_key}\"}\n",
-    "\n",
-    "    try:\n",
-    "        response = requests.get(url, headers=headers)\n",
-    "        response.raise_for_status()\n",
-    "        models = response.json()\n",
-    "        models = [model[\"id\"] for model in models[\"data\"]]\n",
-    "\n",
-    "        return models\n",
-    "\n",
-    "    except requests.exceptions.RequestException as e:\n",
-    "        print(f\"An error occurred: {e}\")\n",
-    "\n",
-    "        return None\n",
-    "\n",
-    "# Example usage\n",
-    "available_models = get_models()\n",
-    "\n",
-    "if available_models:\n",
-    "    print(\"Available models:\", available_models)\n",
-    "\n",
-    "else:\n",
-    "    print(\"Failed to retrieve models\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -89,10 +42,60 @@
     "    api_key=api_key,\n",
     "    model=model,\n",
     "    api_base=proxy_url,\n",
-    "    temperature=0.2,\n",
+    "    temperature=0.0,\n",
     ")\n",
     "\n",
     "dspy.configure(lm=lm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_example() -> dspy.Example:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_data = pd.read_csv(\"data/open_domain_clean.csv\")\n",
+    "specific_data = pd.read_csv(\"data/specific_domain_clean.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_data = pd.concat([open_data, specific_data])\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "for _, row in cat_data.iterrows():\n",
+    "    example = create_example()\n",
+    "    data.append(example)"
    ]
   },
   {
