python scrip na preprocessing + jsonl na csv data

--- a/models/gpt-4o-mini.ipynb
+++ b/models/gpt-4o-mini.ipynb
@@ -2,14 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\riso\\Desktop\\Prompt-Classification\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import dotenv\n",
     "import dspy\n",
-    "import json"
+    "import pandas as pd\n",
+    "from dspy.teleprompt import BootstrapFewShotWithRandomSearch\n",
+    "from dspy.evaluate import Evaluate"
    ]
   },
   {
@@ -21,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +40,15 @@
     "\n",
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "proxy_url = os.getenv(\"PROXY_URL\")\n",
-    "model = \"gpt-4o-mini\""
+    "model = \"gpt-4o-mini\"\n",
+    "\n",
+    "if not api_key:\n",
+    "    raise ValueError(\"API key not found. Please check your environment variables.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +71,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_example() -> dspy.Example:\n",
-    "    pass"
+    "def create_example(row: pd.Series) -> dspy.Example:\n",
+    "    return dspy.Example(\n",
+    "        prompt=row[\"question\"],\n",
+    "        completion=row[\"answer\"],\n",
+    "        label=row[\"label\"],\n",
+    "    ).with_inputs(\"prompt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_data = pd.read_csv(\"../data/open_domain_clean.csv\", sep=\";\")\n",
+    "specific_data = pd.read_csv(\"../data/specific_domain_clean.csv\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_examples = []\n",
+    "specific_examples = []  \n",
+    "\n",
+    "for _, row in open_data.iterrows():\n",
+    "    example = create_example(row=row)\n",
+    "    open_examples.append(example)\n",
+    "\n",
+    "for _, row in specific_data.iterrows():\n",
+    "    example = create_example(row=row)\n",
+    "    specific_examples.append(example)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Signature & Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClasificationSignature(dspy.Signature):\n",
+    "    \"\"\"Classify if a text is specific for a domain or not.\"\"\"\n",
+    "\n",
+    "    prompt = dspy.InputField(desc=\"The prompt to classify.\")\n",
+    "\n",
+    "    explanation = dspy.OutputField(desc=\"Reasoning behind the classification.\")\n",
+    "    label = dspy.OutputField(desc=\"True, if the input text is domain specific, False otherwise.\")\n",
+    "    \n",
+    "\n",
+    "class ClassificationModule(dspy.Module):\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.prog = dspy.ChainOfThought(ClasificationSignature)\n",
+    "        \n",
+    "    def forward(self, prompt: str) -> ClasificationSignature:\n",
+    "        prediction = self.prog(prompt=prompt)\n",
+    "        return prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metric & Teleprompter"
    ]
   },
   {
@@ -71,13 +157,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "open_data = pd.read_csv(\"data/open_domain_clean.csv\")\n",
-    "specific_data = pd.read_csv(\"data/specific_domain_clean.csv\")"
+    "def parse_answer(answer: str) -> bool:\n",
+    "    answer = answer.lower()\n",
+    "    if \"yes\" in answer or \"true\" in answer:\n",
+    "        return True\n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comparison_metric(gold, pred, trace=None) -> bool:\n",
+    "    return parse_answer(gold) == parse_answer(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fewshot_optimizer = BootstrapFewShotWithRandomSearch(metric=comparison_metric, max_bootstrapped_demos=2, num_candidate_programs=8, num_threads=6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Output "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = ClassificationModule()(prompt=open_examples[0].prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -89,64 +213,7 @@
     }
    ],
    "source": [
-    "cat_data = pd.concat([open_data, specific_data])\n",
-    "\n",
-    "data = []\n",
-    "\n",
-    "for _, row in cat_data.iterrows():\n",
-    "    example = create_example()\n",
-    "    data.append(example)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ClasificationSignature(dspy.Signature):\n",
-    "    \"\"\"Classify if the input text is in law domain or not. If you are not sure about the domain classify as neutral.\"\"\"\n",
-    "\n",
-    "    prompt = dspy.InputField(desc=\"The input text to classify.\")\n",
-    "\n",
-    "    explanation = dspy.OutputField(desc=\"Reasoning behind the classification.\")\n",
-    "    answer = dspy.OutputField(desc=\"Yes if the input text is domain specific, No otherwise. Neutral if not sure.\")\n",
-    "\n",
-    "\n",
-    "class ClassificationSimple(dspy.Module):\n",
-    "    def __init__(self) -> None:\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.prog = dspy.ChainOfThought(ClasificationSignature)\n",
-    "    \n",
-    "    def forward(self, prompt: str) -> ClasificationSignature:\n",
-    "        prediction = self.prog(prompt=prompt)\n",
-    "        return prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'output' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m test_answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHistorically, the threshold for \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoing business\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m for purposes of jurisdiction was been very low. Any regular office or building used for the transaction of business would quality as would any work \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdirectly\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m particularly at a state (e.g. if you did architectural work for a factory in Mississippi from your offices in Alaska, you would be \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoing business\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m in Mississippi). Also, participation in a trade show would normally constitute \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoing business\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m for a transaction arising out of the trade show. A string of recent U.S. Supreme Court cases have tended to interpret this phrase more narrowly, but so long as a lawsuit has a nexus with the instance of \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoing business\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m in a state that is in question in the lawsuit, the definition isnt that much different for most purposes. A subsidiary or affiliate companys operations in a state will ordinarily not constitute doing business in a state on behalf of the parent company under recent U.S. Supreme Court precedents. Suppose the company engaged a New York-based Plaintiff, and its representatives signed the contract with the Plaintiff in New York City. Does this satisfy the minimum presence rule? Yes. Suppose, instead, the plaintiff and contract signing were in New Jersey, but the company hired a law firm with offices in New York City. Does this qualify? This could depend upon the subject matter of the contract and where the negotiations took place.\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#input = dspy.Example(prompt=test_query, explanation=test_answer, answer=\"Yes\").with_inputs(\"prompt\")\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#output = ClassificationSimple()(input.prompt)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43moutput\u001b[49m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'output' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "test_query = 'In order to be sued in a particular jurisdiction, say New York, a company must have a minimal business presence in the jurisdiction. What constitutes such a presence? Suppose the company engaged a New York-based Plaintiff, and its representatives signed the contract with the Plaintiff in New York City. Does this satisfy the minimum presence rule? Suppose, instead, the plaintiff and contract signing were in New Jersey, but the company hired a law firm with offices in New York City. Does this qualify?'\n",
-    "test_answer = 'Historically, the threshold for \"doing business\" for purposes of jurisdiction was been very low. Any regular office or building used for the transaction of business would quality as would any work \"directly\" particularly at a state (e.g. if you did architectural work for a factory in Mississippi from your offices in Alaska, you would be \"doing business\" in Mississippi). Also, participation in a trade show would normally constitute \"doing business\" for a transaction arising out of the trade show. A string of recent U.S. Supreme Court cases have tended to interpret this phrase more narrowly, but so long as a lawsuit has a nexus with the instance of \"doing business\" in a state that is in question in the lawsuit, the definition isnt that much different for most purposes. A subsidiary or affiliate companys operations in a state will ordinarily not constitute doing business in a state on behalf of the parent company under recent U.S. Supreme Court precedents. Suppose the company engaged a New York-based Plaintiff, and its representatives signed the contract with the Plaintiff in New York City. Does this satisfy the minimum presence rule? Yes. Suppose, instead, the plaintiff and contract signing were in New Jersey, but the company hired a law firm with offices in New York City. Does this qualify? This could depend upon the subject matter of the contract and where the negotiations took place.'\n",
-    "\n",
-    "input = dspy.Example(prompt=test_query, explanation=test_answer, answer=\"Yes\").with_inputs(\"prompt\")\n",
-    "output = ClassificationSimple()(input.prompt)"
+    "print(output.label)"
    ]
   },
   {
@@ -154,9 +221,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(output.answer)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
