--- a/models/gpt-4o-mini.ipynb
+++ b/models/gpt-4o-mini.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\riso\\Desktop\\Prompt-Classification\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import dotenv\n",
     "import dspy\n",
     "import pandas as pd\n",
     "from dspy.teleprompt import BootstrapFewShotWithRandomSearch\n",
-    "from dspy.evaluate import Evaluate"
+    "from dspy.evaluate import Evaluate\n",
+    "import random"
    ]
   },
   {
@@ -32,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,22 +77,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "open_data = pd.read_csv(\"../data/open_domain_clean.csv\", sep=\";\")\n",
-    "specific_data = pd.read_csv(\"../data/specific_domain_clean.csv\", sep=\";\")"
+    "open_data = pd.read_csv(\"../data/open_domain_data.csv\")\n",
+    "specific_data = pd.read_csv(\"../data/specific_domain_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "open_examples = []\n",
-    "specific_examples = []  \n",
+    "open_examples = list()\n",
+    "specific_examples = list()  \n",
     "\n",
     "for _, row in open_data.iterrows():\n",
     "    example = create_example(row=row)\n",
@@ -112,6 +104,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_data = open_examples + specific_examples\n",
+    "random.shuffle(final_data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -120,12 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ClasificationSignature(dspy.Signature):\n",
-    "    \"\"\"Classify if a text is specific for a domain or not.\"\"\"\n",
+    "    \"\"\"Classify if a text is specific for a domain or not. Target domain is law.\"\"\"\n",
     "\n",
     "    prompt = dspy.InputField(desc=\"The prompt to classify.\")\n",
     "\n",
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,9 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Going to sample between 1 and 2 traces per predictor.\n",
+      "Will attempt to bootstrap 8 candidate sets.\n"
+     ]
+    }
+   ],
    "source": [
     "fewshot_optimizer = BootstrapFewShotWithRandomSearch(metric=comparison_metric, max_bootstrapped_demos=2, num_candidate_programs=8, num_threads=6)"
    ]
@@ -192,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,27 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
     "print(output.label)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
